# DataAcquisition

./: .gitignore  .gitmodules
AndroidApp/: README.md
AndroidApp/app/: build.gradle
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
Arduino/: .cproject  README.md  changelog.txt
Arduino/lib/SENSORFUNC/: SENSORFUNC.h
Arduino/src/: main.cpp
CAD_files/: Battery Model.SLDPRT  README.md  Transponder Charging Holder v2.SLDPRT  Transponder Charging Holder.SLDPRT
CAD_files/Dashboard Assembly/: Accelerometer.SLDPRT  Arduino Mega Case Lid.SLDPRT  Arduino Mega Case.SLDPRT  ArduinoMega2560.SLDPRT  Dash Bottom Half.SLDPRT  Dash Bottom Right Half.SLDPRT  HUD Assem2.SLDASM  LCD Box.SLDPRT  SPLIT HUD 1.1.SLDPRT  SPLIT HUD 2.1.SLDPRT  Screenshots.docx
CAD_files/Small Dash Assembly/: ArduinoMega2560.SLDPRT  Small Dash Assembly.SLDASM  Small Dash Bottom.SLDPRT  Small Dash.SLDPRT
CAD_files/Small Dash Assembly V2/: Dash Assembly.SLDASM  Dash Bottom.SLDPRT  Dash Bottom.STL  Dash.SLDPRT  Dash.STL  LCD Box.SLDPRT
DevVM/: README.md  Vagrantfile  startup.sh
Documents_Presentations/: Baja Electrical Basics.docx  Baja Innovation Presentation (Auburn Design Review Event).pptx  Electrical Ideas Parts List.xlsx  Power Consumption.txt
MATLAB/: LOG00167.TXT  bajatest.m
PCB Files/: bajaV1.dip  bajaV2.dip
PythonBluetoothServer/: README.md  bluetoothServer.py
PythonTest/: bluetoothServer.py
Test/: build.gradle
Test/app/: build.gradle
raspberrypi/: CMakeLists.txt  build.sh  build_debug.sh
raspberrypi/component_tests/: README.md
raspberrypi/component_tests/BluetoothShield/: BluetoothShield.ino
raspberrypi/component_tests/Oneshot_Test/: Oneshot_Test.ino
raspberrypi/component_tests/raspberrypi_GPIO/: gpio_test.c
raspberrypi/include/: wiringPi
raspberrypi/include/7SEG_REC-S3461CSR/: SevenSegDisplay.cpp
raspberrypi/include/SENSORFUNC/: SENSORFUNC.cpp
raspberrypi/include/SFE_MMA8452Q/: SFE_MMA8452Q.cpp
raspberrypi/lib/: README.md  libwiringPi.so.2.46.arm
raspberrypi/lib/7SEG_REC-S3461CSR/: SevenSegDisplay.h
raspberrypi/python/: CircularBuffer.py  btInterface.py  message.py  messages.py
raspberrypi/src/: logger.cpp  logger.h  main.cpp  mainOLD.cpp  sensorbase.h  sparkplugsensor.cpp  sparkplugsensor.h  thermistor.cpp  thermistor.h
(+60 files in other folders)
